--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "client-query",
+  "name": "query-client",
   "module": "test.ts",
   "type": "module",
   "scripts": {
-    "build": "bun build index.ts --outdir dist --target bun"
+    "build": "bun build index.ts --outdir dist --target bun",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.4",
+    "typescript": "^5.9.2"
   },
   "peerDependencies": {
     "typescript": "^5.9.2"
