--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs", // Override module setting for Jest
-    "verbatimModuleSyntax": false // Optional: Disable for tests if needed
+    "verbatimModuleSyntax": false, // Optional: Disable for tests if needed
+    "target": "es2018"
   }
 }
