--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,16 @@
       "@/*": [
         "./src/*"
       ]
-    }
-  }
+    },
+    "outDir": "lib",
+    "rootDir": "src",
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "src/__tests__",
+    "**/*.test.ts"
+  ],
 }
