--- a/.github/workflows/web-audit-report.yml
+++ b/.github/workflows/web-audit-report.yml
@@ -6,7 +6,7 @@ jobs:
   audit:
     runs-on: ubuntu-latest
     steps:
-      - uses: web-audit-report@v2
+      - uses: ElJijuna/web-audit-action@v2
         with:
           runtime: npm
           token: ${{ secrets.MONITORING_TOOL_DB }}
