--- a/.github/workflows/web-audit-report.yml
+++ b/.github/workflows/web-audit-report.yml
@@ -1,7 +1,8 @@
-name: Web Aduti Report
+name: Web Audit Report
 on:
   workflow_dispatch:
-
+  schedule:
+    - cron: '0 6 * * *' # ⏰ Ejecuta todos los días a las 6:00 AM UTC
 jobs:
   audit:
     runs-on: ubuntu-latest
