--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   ],
   "scripts": {
     "build": "vite build",
-    "test": "jest --detectOpenHandles",
-    "test:coverage": "jest --coverage",
+    "test": "jest --detectOpenHandles --testPathIgnorePatterns=\"__tests__/performance\"",
+    "test:coverage": "jest --coverage --testPathIgnorePatterns=\"__tests__/performance\"",
+    "test:performance": "jest __tests__/performance --runInBand",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
